planner-grounder/src/upddl/antlr/UPDDLParser.java
// $ANTLR 3.4 /home/kron/Desktop/workspace/planner/src/UPDDL.g 2012-06-19 12:46:03
package upddl.antlr;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


/**
 * uPDDL grammar
 * 
 * by Martin Kronegger
 * 
 * This grammar is based on Zeyn Saigol's PDDL grammar
 * from: http://www.antlr.org/grammar/1222962012944/Pddl.g
 */
@SuppressWarnings({"all", "warnings", "unchecked"})
public class UPDDLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACTION", "ACTION_PARAMETERS", "AND_EFFECT", "AND_GD", "ANY_CHAR", "ASSIGN_EFFECT", "BINARY_OP", "CONSTANTS", "DIGIT", "DOMAIN", "DOMAIN_NAME", "EFFECT", "FUNCTIONS", "FUNC_HEAD", "GOAL", "INIT", "INIT_EQ", "LETTER", "LINE_COMMENT", "NAME", "NEVERS", "NOT_EFFECT", "NOT_GD", "NOT_PRED_INIT", "NUMBER", "OBJECTS", "ONEOF", "PRECONDITION", "PREDICATES", "PRED_HEAD", "PRED_INST", "PROBLEM", "PROBLEM_DOMAIN", "PROBLEM_METRIC", "PROBLEM_NAME", "REQUIREMENTS", "REQUIRE_KEY", "TYPES", "UNKNOWN_PRED_INST", "VARIABLE", "WHEN_EFFECT", "WHITESPACE", "'('", "')'", "'*'", "'+'", "'-'", "'/'", "':action'", "':constants'", "':domain'", "':effect'", "':functions'", "':goal'", "':init'", "':metric'", "':never'", "':objects'", "':parameters'", "':precondition'", "':predicates'", "':requirements'", "':types'", "'='", "'and'", "'assign'", "'decrease'", "'define'", "'domain'", "'increase'", "'is-violated'", "'maximize'", "'minimize'", "'not'", "'number'", "'oneof'", "'problem'", "'scale-down'", "'scale-up'", "'total-time'", "'unknown'", "'when'"
    };

    public static final int EOF=-1;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int T__79=79;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int T__84=84;
    public static final int T__85=85;
    public static final int ACTION=4;
    public static final int ACTION_PARAMETERS=5;
    public static final int AND_EFFECT=6;
    public static final int AND_GD=7;
    public static final int ANY_CHAR=8;
    public static final int ASSIGN_EFFECT=9;
    public static final int BINARY_OP=10;
    public static final int CONSTANTS=11;
    public static final int DIGIT=12;
    public static final int DOMAIN=13;
    public static final int DOMAIN_NAME=14;
    public static final int EFFECT=15;
    public static final int FUNCTIONS=16;
    public static final int FUNC_HEAD=17;
    public static final int GOAL=18;
    public static final int INIT=19;
    public static final int INIT_EQ=20;
    public static final int LETTER=21;
    public static final int LINE_COMMENT=22;
    public static final int NAME=23;
    public static final int NEVERS=24;
    public static final int NOT_EFFECT=25;
    public static final int NOT_GD=26;
    public static final int NOT_PRED_INIT=27;
    public static final int NUMBER=28;
    public static final int OBJECTS=29;
    public static final int ONEOF=30;
    public static final int PRECONDITION=31;
    public static final int PREDICATES=32;
    public static final int PRED_HEAD=33;
    public static final int PRED_INST=34;
    public static final int PROBLEM=35;
    public static final int PROBLEM_DOMAIN=36;
    public static final int PROBLEM_METRIC=37;
    public static final int PROBLEM_NAME=38;
    public static final int REQUIREMENTS=39;
    public static final int REQUIRE_KEY=40;
    public static final int TYPES=41;
    public static final int UNKNOWN_PRED_INST=42;
    public static final int VARIABLE=43;
    public static final int WHEN_EFFECT=44;
    public static final int WHITESPACE=45;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public UPDDLParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public UPDDLParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return UPDDLParser.tokenNames; }
    public String getGrammarFileName() { return "/home/kron/Desktop/workspace/planner/src/UPDDL.g"; }


    	private boolean wasError = false;
    	
    	public void reportError(RecognitionException e) {
    		wasError = true;
    		super.reportError(e);
    	}
    	
    	public boolean invalidGrammar() {
    		return wasError;
    	}


    public static class npddlDoc_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "npddlDoc"
    // /home/kron/Desktop/workspace/planner/src/UPDDL.g:84:1: npddlDoc : ( domain | problem );
    public final UPDDLParser.npddlDoc_return npddlDoc() throws RecognitionException {
        UPDDLParser.npddlDoc_return retval = new UPDDLParser.npddlDoc_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        UPDDLParser.domain_return domain1 =null;

        UPDDLParser.problem_return problem2 =null;



        try {
            // /home/kron/Desktop/workspace/planner/src/UPDDL.g:84:10: ( domain | problem )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==46) ) {
                int LA1_1 = input.LA(2);

                if ( (LA1_1==71) ) {
                    int LA1_2 = input.LA(3);

                    if ( (LA1_2==46) ) {
                        int LA1_3 = input.LA(4);

                        if ( (LA1_3==72) ) {
                            alt1=1;
                        }
                        else if ( (LA1_3==80) ) {
                            alt1=2;
                        }
                        else {
                            if (state.backtracking>0) {state.failed=true; return retval;}
                            NoViableAltException nvae =
                                new NoViableAltException("", 1, 3, input);

                            throw nvae;

                        }
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 1, 2, input);

                        throw nvae;

                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 1, input);

                    throw nvae;

                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }
            switch (alt1) {
                case 1 :
                    // /home/kron/Desktop/workspace/planner/src/UPDDL.g:84:12: domain
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_domain_in_npddlDoc201);
                    domain1=domain();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, domain1.getTree());

                    }
                    break;
                case 2 :
                    // /home/kron/Desktop/workspace/planner/src/UPDDL.g:84:21: problem
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_problem_in_npddlDoc205);
                    problem2=problem();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, problem2.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "npddlDoc"


    public static class domain_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "domain"
    // /home/kron/Desktop/workspace/planner/src/UPDDL.g:89:1: domain : '(' 'define' domainName ( requireDef )? ( typesDef )? ( constantsDef )? ( predicatesDef )? ( functionsDef )? ( neversDef )? ( actionDef )* ')' -> ^( DOMAIN domainName ( requireDef )? ( typesDef )? ( constantsDef )? ( predicatesDef )? ( functionsDef )? ( neversDef )? ( actionDef )* ) ;
    public final UPDDLParser.domain_return domain() throws RecognitionException {
        UPDDLParser.domain_return retval = new UPDDLParser.domain_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal3=null;
        Token string_literal4=null;
        Token char_literal13=null;
        UPDDLParser.domainName_return domainName5 =null;

        UPDDLParser.requireDef_return requireDef6 =null;

        UPDDLParser.typesDef_return typesDef7 =null;

        UPDDLParser.constantsDef_return constantsDef8 =null;

        UPDDLParser.predicatesDef_return predicatesDef9 =null;

        UPDDLParser.functionsDef_return functionsDef10 =null;

        UPDDLParser.neversDef_return neversDef11 =null;

        UPDDLParser.actionDef_return actionDef12 =null;


        Object char_literal3_tree=null;
        Object string_literal4_tree=null;
        Object char_literal13_tree=null;
        RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
        RewriteRuleTokenStream stream_71=new RewriteRuleTokenStream(adaptor,"token 71");
        RewriteRuleSubtreeStream stream_constantsDef=new RewriteRuleSubtreeStream(adaptor,"rule constantsDef");
        RewriteRuleSubtreeStream stream_requireDef=new RewriteRuleSubtreeStream(adaptor,"rule requireDef");
        RewriteRuleSubtreeStream stream_predicatesDef=new RewriteRuleSubtreeStream(adaptor,"rule predicatesDef");
        RewriteRuleSubtreeStream stream_neversDef=new RewriteRuleSubtreeStream(adaptor,"rule neversDef");
        RewriteRuleSubtreeStream stream_domainName=new RewriteRuleSubtreeStream(adaptor,"rule domainName");
        RewriteRuleSubtreeStream stream_functionsDef=new RewriteRuleSubtreeStream(adaptor,"rule functionsDef");
        RewriteRuleSubtreeStream stream_actionDef=new RewriteRuleSubtreeStream(adaptor,"rule actionDef");
        RewriteRuleSubtreeStream stream_typesDef=new RewriteRuleSubtreeStream(adaptor,"rule typesDef");
        try {
            // /home/kron/Desktop/workspace/planner/src/UPDDL.g:90:2: ( '(' 'define' domainName ( requireDef )? ( typesDef )? ( constantsDef )? ( predicatesDef )? ( functionsDef )? ( neversDef )? ( actionDef )* ')' -> ^( DOMAIN domainName ( requireDef )? ( typesDef )? ( constantsDef )? ( predicatesDef )? ( functionsDef )? ( neversDef )? ( actionDef )* ) )
            // /home/kron/Desktop/workspace/planner/src/UPDDL.g:90:4: '(' 'define' domainName ( requireDef )? ( typesDef )? ( constantsDef )? ( predicatesDef )? ( functionsDef )? ( neversDef )? ( actionDef )* ')'
            {
            char_literal3=(Token)match(input,46,FOLLOW_46_in_domain217); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_46.add(char_literal3);


            string_literal4=(Token)match(input,71,FOLLOW_71_in_domain219); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_71.add(string_literal4);


            pushFollow(FOLLOW_domainName_in_domain221);
            domainName5=domainName();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_domainName.add(domainName5.getTree());

            // /home/kron/Desktop/workspace/planner/src/UPDDL.g:91:3: ( requireDef )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==46) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==65) ) {
                    alt2=1;
                }
            }
            switch (alt2) {
                case 1 :
                    // /home/kron/Desktop/workspace/planner/src/UPDDL.g:91:3: requireDef
                    {
                    pushFollow(FOLLOW_requireDef_in_domain225);
                    requireDef6=requireDef();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_requireDef.add(requireDef6.getTree());

                    }
                    break;

            }


            // /home/kron/Desktop/workspace/planner/src/UPDDL.g:92:3: ( typesDef )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==46) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==66) ) {
                    alt3=1;
                }
            }
            switch (alt3) {
                case 1 :
                    // /home/kron/Desktop/workspace/planner/src/UPDDL.g:92:3: typesDef
                    {
                    pushFollow(FOLLOW_typesDef_in_domain230);
                    typesDef7=typesDef();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_typesDef.add(typesDef7.getTree());

                    }
                    break;

            }


            // /home/kron/Desktop/workspace/planner/src/UPDDL.g:93:3: ( constantsDef )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==46) ) {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==53) ) {
                    alt4=1;
                }
            }
            switch (alt4) {
                case 1 :
                    // /home/kron/Desktop/workspace/planner/src/UPDDL.g:93:3: constantsDef
                    {
                    pushFollow(FOLLOW_constantsDef_in_domain235);
                    constantsDef8=constantsDef();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_constantsDef.add(constantsDef8.getTree());

                    }
                    break;

            }


            // /home/kron/Desktop/workspace/planner/src/UPDDL.g:94:3: ( predicatesDef )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==46) ) {
                int LA5_1 = input.LA(2);

                if ( (LA5_1==64) ) {
                    alt5=1;
                }
            }
            switch (alt5) {
                case 1 :
                    // /home/kron/Desktop/workspace/planner/src/UPDDL.g:94:3: predicatesDef
                    {
                    pushFollow(FOLLOW_predicatesDef_in_domain240);
                    predicatesDef9=predicatesDef();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_predicatesDef.add(predicatesDef9.getTree());

                    }
                    break;

            }


            // /home/kron/Desktop/workspace/planner/src/UPDDL.g:95:3: ( functionsDef )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==46) ) {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==56) ) {
                    alt6=1;
                }
            }
            switch (alt6) {
                case 1 :
                    // /home/kron/Desktop/workspace/planner/src/UPDDL.g:95:3: functionsDef
                    {
                    pushFollow(FOLLOW_functionsDef_in_domain245);
                    functionsDef10=functionsDef();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_functionsDef.add(functionsDef10.getTree());

                    }
                    break;

            }


            // /home/kron/Desktop/workspace/planner/src/UPDDL.g:96:3: ( neversDef )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==46) ) {
                int LA7_1 = input.LA(2);

                if ( (LA7_1==60) ) {
                    alt7=1;
                }
            }
            switch (alt7) {
                case 1 :
                    // /home/kron/Desktop/workspace/planner/src/UPDDL.g:96:3: neversDef
                    {
                    pushFollow(FOLLOW_neversDef_in_domain250);
                    neversDef11=neversDef();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_neversDef.add(neversDef11.getTree());

                    }
                    break;

            }


            // /home/kron/Desktop/workspace/planner/src/UPDDL.g:97:3: ( actionDef )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==46) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // /home/kron/Desktop/workspace/planner/src/UPDDL.g:97:3: actionDef
            	    {
            	    pushFollow(FOLLOW_actionDef_in_domain255);
            	    actionDef12=actionDef();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_actionDef.add(actionDef12.getTree());

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            char_literal13=(Token)match(input,47,FOLLOW_47_in_domain260); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_47.add(char_literal13);


            // AST REWRITE
            // elements: actionDef, functionsDef, typesDef, predicatesDef, constantsDef, domainName, requireDef, neversDef
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 99:2: -> ^( DOMAIN domainName ( requireDef )? ( typesDef )? ( constantsDef )? ( predicatesDef )? ( functionsDef )? ( neversDef )? ( actionDef )* )
            {
                // /home/kron/Desktop/workspace/planner/src/UPDDL.g:99:5: ^( DOMAIN domainName ( requireDef )? ( typesDef )? ( constantsDef )? ( predicatesDef )? ( functionsDef )? ( neversDef )? ( actionDef )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(DOMAIN, "DOMAIN")
                , root_1);

                adaptor.addChild(root_1, stream_domainName.nextTree());

                // /home/kron/Desktop/workspace/planner/src/UPDDL.g:100:3: ( requireDef )?
                if ( stream_requireDef.hasNext() ) {
                    adaptor.addChild(root_1, stream_requireDef.nextTree());

                }
                stream_requireDef.reset();

                // /home/kron/Desktop/workspace/planner/src/UPDDL.g:101:3: ( typesDef )?
                if ( stream_typesDef.hasNext() ) {
                    adaptor.addChild(root_1, stream_typesDef.nextTree());

                }
                stream_typesDef.reset();

                // /home/kron/Desktop/workspace/planner/src/UPDDL.g:102:3: ( constantsDef )?
                if ( stream_constantsDef.hasNext() ) {
                    adaptor.addChild(root_1, stream_constantsDef.nextTree());

                }
                stream_constantsDef.reset();

                // /home/kron/Desktop/workspace/planner/src/UPDDL.g:103:3: ( predicatesDef )?
                if ( stream_predicatesDef.hasNext() ) {
                    adaptor.addChild(root_1, stream_predicatesDef.nextTree());

                }
                stream_predicatesDef.reset();

                // /home/kron/Desktop/workspace/planner/src/UPDDL.g:104:3: ( functionsDef )?
                if ( stream_functionsDef.hasNext() ) {
                    adaptor.addChild(root_1, stream_functionsDef.nextTree());

                }
                stream_functionsDef.reset();

                // /home/kron/Desktop/workspace/planner/src/UPDDL.g:105:3: ( neversDef )?
                if ( stream_neversDef.hasNext() ) {
                    adaptor.addChild(root_1, stream_neversDef.nextTree());

                }
                stream_neversDef.reset();

                // /home/kron/Desktop/workspace/planner/src/UPDDL.g:106:3: ( actionDef )*
                while ( stream_actionDef.hasNext() ) {
                    adaptor.addChild(root_1, stream_actionDef.nextTree());

                }
                stream_actionDef.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "domain"


    public static class domainName_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "domainName"
    // /home/kron/Desktop/workspace/planner/src/UPDDL.g:109:1: domainName : '(' 'domain' NAME ')' -> ^( DOMAIN_NAME NAME ) ;
    public final UPDDLParser.domainName_return domainName() throws RecognitionException {
        UPDDLParser.domainName_return retval = new UPDDLParser.domainName_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal14=null;
        Token string_literal15=null;
        Token NAME16=null;
        Token char_literal17=null;

        Object char_literal14_tree=null;
        Object string_literal15_tree=null;
        Object NAME16_tree=null;
        Object char_literal17_tree=null;
        RewriteRuleTokenStream stream_NAME=new RewriteRuleTokenStream(adaptor,"token NAME");
        RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
        RewriteRuleTokenStream stream_72=new RewriteRuleTokenStream(adaptor,"token 72");

        try {
            // /home/kron/Desktop/workspace/planner/src/UPDDL.g:110:2: ( '(' 'domain' NAME ')' -> ^( DOMAIN_NAME NAME ) )
            // /home/kron/Desktop/workspace/planner/src/UPDDL.g:110:4: '(' 'domain' NAME ')'
            {
            char_literal14=(Token)match(input,46,FOLLOW_46_in_domainName319); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_46.add(char_literal14);


            string_literal15=(Token)match(input,72,FOLLOW_72_in_domainName321); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_72.add(string_literal15);


            NAME16=(Token)match(input,NAME,FOLLOW_NAME_in_domainName323); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_NAME.add(NAME16);


            char_literal17=(Token)match(input,47,FOLLOW_47_in_domainName325); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_47.add(char_literal17);


            // AST REWRITE
            // elements: NAME
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
